Simplify .internal-link-fixed-header positioning
Since #map_sidebar no longer disappears behind #site_header, there is
no need for .internal-link-fixed-header to compensate for the height
of the header. Just an arbitrary 2em offset is enough to prevent it
butting up against the top of the #map_sidebar scrollable element.

Meanwhile, moving the .internal-link-fixed-header anchor element to
the top of its parent list item means it no longer has to compensate
for the height of the moderation form elements, because those elements
(indeed, the entire list item <form>) now comes *after* the anchor.

Fixes mysociety/fixmystreet-commercial#1027.

--- a/web/cobrands/sass/_layout.scss
+++ b/web/cobrands/sass/_layout.scss
@@ -13,13 +13,8 @@ $header-top-border: $header-top-border-width solid $primary !default;
 
 .internal-link-fixed-header {
     display: block;
-    @if unit($mappage-header-height) == 'em' {
-        padding-top: $mappage-header-height + 1em;
-        margin-top: -($mappage-header-height + 1em);
-    } @else {
-        padding-top: $mappage-header-height + 16px;
-        margin-top: -($mappage-header-height + 16px);
-    }
+    position: relative;
+    top: -2em;
 }
 
 //hacks for desk/mob only stuff
